gen/slides/v1/cargo-errors.log
    Checking google-slides1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/slides/v1/lib)
error[E0072]: recursive type `schemas::Page` has infinite size
    --> slides/v1/lib/src/lib.rs:3639:5
     |
3639 |     pub struct Page {
     |     ^^^^^^^^^^^^^^^ recursive type has infinite size
...
3666 |         pub slide_properties: ::std::option::Option<crate::schemas::SlideProperties>,
     |         ---------------------------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::Page` representable

error[E0072]: recursive type `schemas::SlideProperties` has infinite size
    --> slides/v1/lib/src/lib.rs:6428:5
     |
6428 |     pub struct SlideProperties {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
...
6437 |         pub notes_page: ::std::option::Option<crate::schemas::Page>,
     |         ----------------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::SlideProperties` representable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0072`.
error: Could not compile `google-slides1`.

To learn more, run the command again with --verbose.
